--- a/banking-web/src/main/resources/application.properties
+++ b/banking-web/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.servlet.session.timeout=15m
 
 spring.datasource.url = jdbc:mysql://localhost:3306/cubic300_db?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username = root
-spring.datasource.password = mysql@1234
+spring.datasource.password = Mysql123$
 
 
 ## Hibernate Properties
@@ -49,7 +49,7 @@ spring.resources.static-locations=classpath:/templates/customer/,classpath:/stat
 # Static resources reloading during development
 spring.devtools.restart.additional-paths=.
 logging.level.root=INFO
-logging.file = F:/logs/banking_300.log
+logging.file = F:/logs/banking_300.log  
 log4j.logger.com.rab3tech=DEBUG
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.out
